--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
+/* * {
+  border: 1px solid red;
+} */
 :root {
   --radius: 0.625rem;
   --background: oklch(1 0 0);
